--- a/source/modules/head/head.pug
+++ b/source/modules/head/head.pug
@@ -6,6 +6,7 @@ mixin head(data)
     meta(name='keywords', content='')
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i', rel='stylesheet')
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=vietnamese" rel="stylesheet")
     link(rel='stylesheet', type='text/css', href='css/main.css')
 
 
