--- a/source/sass/base/_global.scss
+++ b/source/sass/base/_global.scss
@@ -1,3 +1,290 @@
 //
 // Base :: Global
 // --------------------------------------------------
+
+$main1: #f15b5c;
+$font1: 'Open Sans', sans-serif;
+$fontbay: 'Dancing Script', cursive;
+
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.cap {
+  text-transform: capitalize;
+}
+
+.temp1 {
+  width: 794px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-top: 10px solid $main1;
+  font-family: $font1;
+  font-size: 13px;
+  box-shadow: 0 0px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
+  color: #333;
+
+  header {
+    padding: 30px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .left {
+      display: flex;
+      align-items: center;
+
+      .avatar {
+        width: 120px;
+        height: 120px;
+        overflow: hidden;
+        border-radius: 5px;
+        box-shadow: 0 4px 2px -2px rgba(0,0,0,0.4);
+        background: url("../images/1.jpg");
+        background-size: cover;
+        background-position: center center;
+      }
+
+      .text {
+        margin-left: 15px;
+        h3 {
+          text-transform: uppercase;
+
+          &.name {
+            font-weight: bold;
+          }
+        }
+      }
+    }
+
+    .right {
+      font-size: 13px;
+
+      .lrow {
+
+        .first {
+          width: 70px;
+          display: inline-block;
+          text-align: right;
+        }
+
+        .second {
+          width: 200px;
+          display: inline-block;
+          padding-left: 15px;
+        }
+      }
+
+      p {
+        margin-bottom: 2px;
+      }
+    }
+  }
+
+  .sub-header {
+    padding: 20px;
+    background: $main1;
+    color: #fff;
+    font-style: italic;
+    text-align: justify;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  main {
+    padding: 15px;
+    background: #f2f2f2;
+    h3.title {
+      text-transform: uppercase;
+      font-weight: 600;
+      position: relative;
+      padding-left: 50px;
+      height: 50px;
+      display: flex;
+      align-items: flex-end;
+      font-size: 24px;
+
+      .icon {
+        position: absolute;
+        left: 8px;
+        top: 8px;
+        width: 34px;
+        height: 34px;
+        text-align: center;
+        line-height: 34px;
+        font-size: 18px;
+
+        &:before {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          border: 1px solid #000;
+          top: 0;
+          left: 0;
+          transform: rotate(45deg);
+          border-radius: 4px;
+        }
+      }
+
+      span{
+        display: inline-block;
+        
+        &:before {
+          content: "";
+          width: 60px;
+          height: 2px;
+          background: #000;
+          display: inline-block;
+          margin-right: 8px;
+        }
+      }
+    }
+
+    .mrow {
+      border: 1px solid #ccc;
+      background: #fff;
+      padding: 15px;
+      margin-left: 47px;
+      margin-top: 30px;
+      box-shadow: 0 0px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 40px;
+
+      .left {
+        min-width: 180px;
+        max-width: 180px;
+      }
+      
+      h5.title {
+        font-size: 13px;
+        margin-bottom: 30px;
+        strong {
+          font-size: 16px;
+          display: block;
+          font-weight: 600;
+          margin-bottom: 10px;
+          color: $main1;
+        }
+
+        &.custom {
+          font-weight: 600;
+          margin-bottom : 15px;
+          font-size: 16px;
+          line-height: 1.3;
+          position: relative;
+          padding-left: 25px;
+
+          .fa {
+            position: absolute;
+            left: 0;
+            top: 2px;
+          }
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+
+      .right {
+        padding-left: 15px;
+        margin-left: 15px;
+        border-left: 1px dotted #ccc;
+        flex-grow: 1;
+
+        h5.title {
+          font-size: 13px;
+          margin-bottom: 10px;
+          font-weight: 600;
+          font-size: 16px;
+          color: $main1;
+
+          &.mgb {
+            margin-bottom: 56px;
+          }
+        }
+
+        h6.title {
+          font-size: 12px;
+          margin-left: 20px;
+          font-weight: 600;
+        }
+
+        ul {
+          margin-bottom: 0;
+        }
+      }
+
+      &.daotao {
+        .right h5.title {
+          color: #333;
+        }
+
+        h5.title strong {
+          color: #333;
+        }
+      }
+    }
+  }
+
+  footer{
+    line-height: 50px;
+    text-align: center;
+    font-family: $fontbay;
+    font-size: 22px;
+    background: #f2f2f2;
+    border-top: 1px solid rgba(0,0,0,.1);
+
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.tem2 {
+  footer{
+    height: 50px;
+    overflow: hidden;
+    border: 1px solid #000;
+    position: relative;
+    background: #fff;
+
+    .left {
+      width:calc(50% - 30px);
+      background: $main1;
+      position: relative;
+      height: 100%;
+
+      &:before {
+        content: '';
+        border-top: 36px solid transparent;
+        border-bottom: 36px solid transparent;
+        border-right: 36px solid #000;
+        position: absolute;
+        right: -29px;
+        top: -23px;
+        position: absolute;
+        width: 0;
+        height: 0;
+        transform: rotate(45deg);
+      }
+    }
+
+    p {
+      position: absolute;
+      left: 50%;
+      line-height: 50px;
+      font-size: 18px;
+      font-weight: 600;      
+      top: 0;
+      margin-left: -118px;
+      color: white;
+      mix-blend-mode: difference;
+    }
+  }
+}
