--- a/source/sass/base/_global.scss
+++ b/source/sass/base/_global.scss
@@ -3,7 +3,9 @@
 // --------------------------------------------------
 
 $main1: #f15b5c;
+$main2: #3498db;
 $font1: 'Open Sans', sans-serif;
+$font2: 'Lato', sans-serif;
 $fontbay: 'Dancing Script', cursive;
 
 
@@ -229,6 +231,103 @@ $fontbay: 'Dancing Script', cursive;
           color: #333;
         }
       }
+    }
+  }
+
+  footer{
+    line-height: 50px;
+    text-align: center;
+    font-family: $fontbay;
+    font-size: 22px;
+    background: #f2f2f2;
+    border-top: 1px solid rgba(0,0,0,.1);
+
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.tem2 {
+  width: 794px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  font-family: $font2;
+  font-size: 13px;
+  box-shadow: 0 0px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
+  color: #333;
+  border-right: 20px solid $main1;
+
+  header {
+    height: 200px;
+    position: relative;
+    text-align: right;
+    padding-top: 32px;
+    padding-right: 30px;
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100px;
+      background: $main2;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .avatar {
+      display: inline-block;
+      vertical-align: top;
+      width: 140px;
+      height: 140px;
+      overflow: hidden;
+      border-radius: 3px;
+      box-shadow: 0 4px 2px -2px rgba(0,0,0,0.4);
+      background: url("../images/1.jpg");
+      background-size: cover;
+      background-position: center center;
+    }
+
+    .text {
+      display: inline-block;
+      vertical-align: top;
+      margin-right: 10px;
+      .name {
+        text-transform: uppercase;
+        color: #fff;
+        font-weight: 600;
+        margin: 0;
+        padding-top: 29px;
+        padding-bottom: 10px;
+        font-size: 30px;
+      }
+
+      p {
+        margin: 0;
+        color: #000;
+        font-weight: 400;
+      }
+    }
+  }
+
+  main {
+    padding: 15px;
+
+    h3.title {
+      line-height: 30px;
+      padding: 0;
+      margin: 0;
+      text-transform: uppercase;
+      color: #fff;
+      background: $main2;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    .mrow {
+      
     }
   }
 
